# remote-renderer

./: .gitignore  CMakeLists.txt  GenProjectWindows.bat  readme.md  vcpkg.json
RemoteRenderer/: CMakeLists.txt  RemoteRenderer.cpp  RemoteRenderer.h  RemoteRendererGui.cpp  RemoteRendererGui.h
RemoteRenderer/Application/: Application.cpp  Application.h  Camera.cpp  Camera.h  CameraController.cpp  CameraController.h  Event.cpp  Event.h  EventDispatcher.cpp  EventDispatcher.h  ImguiLayer.cpp  ImguiLayer.h  InputSystem.cpp  InputSystem.h  Layer.cpp  Layer.h  Log.cpp  Log.h  MousePanCameraController.cpp  MousePanCameraController.h  OpenGLContext.cpp  OpenGLContext.h  Singleton.h
RemoteRenderer/Window/: Window.cpp  Window.h
Script/: check_python.bat  download_vcpkg.bat  download_vcpkg.py
